fixed alignmnent

--- a/default.css
+++ b/default.css
@@ -1,15 +1,19 @@
-body {
-  background-color: white;
-  /* Add space outside border: top right bottom left*/
-  margin: 5% 15% 15%;
-  font-family: Helvetica, sans-serif;
+html {
   font-size: 100%;
+}
+
+body {
+
+  background-color: white;
+  /* Add space outside border: top right bottom left */
+  margin: 5% auto 0px auto;
+  width: 50rem;
+  font-family: Helvetica, sans-serif;
   color: hsl(0, 0%, 20%);
 }
 p {
   font-size: 1.5em;
 }
-
 a {
      color: inherit;
 }
